--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -16,10 +16,23 @@ spec:
     spec:
       containers:
       - name: flask-app
-        image: flask-devops-app:v1
+        image: awaismalak/flask-devops-app:v1   # your Docker Hub image
         ports:
         - containerPort: 5000
         env:
         - name: ENV
           value: "production"
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: flask-app-service
+spec:
+  type: NodePort
+  selector:
+    app: flask-app
+  ports:
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
+      nodePort: 32112   # you can choose a port in the 30000-32767 range
