--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         IMAGE_TAG = "v1"
         DOCKERFILE_PATH = "docker/Dockerfile"
         APP_PATH = "app/flask-app"
-        DOCKER_REGISTRY = "awaismalak"  // my dockerhub username
+        DOCKER_REGISTRY = "awaismalak"  // your Docker Hub username
         K8S_DEPLOYMENT_FILE = "kubernetes/flask-app-deployment.yaml"
     }
 
@@ -29,9 +29,19 @@ pipeline {
         stage('Test Container') {
             steps {
                 script {
+                    // Remove existing test container if it exists
+                    sh "docker rm -f test-${IMAGE_NAME} || true"
+
+                    // Run new test container
                     sh "docker run -d --name test-${IMAGE_NAME} -p 5001:5000 ${IMAGE_NAME}:${IMAGE_TAG}"
-                    sh "sleep 10" // wait for container to start
-                    sh "curl -f http://localhost:5001 || exit 1"  // simple health check
+
+                    // Wait for container to start
+                    sh "sleep 10"
+
+                    // Simple health check
+                    sh "curl -f http://localhost:5001 || exit 1"
+
+                    // Stop and remove test container after check
                     sh "docker stop test-${IMAGE_NAME}"
                     sh "docker rm test-${IMAGE_NAME}"
                 }
@@ -77,6 +87,7 @@ pipeline {
         }
     }
 }
+
 
 
 
