--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -27,26 +27,25 @@ pipeline {
         }
 
         stage('Test Container') {
-            steps {
-                script {
-                    // Remove existing test container if it exists
-                    sh "docker rm -f test-${IMAGE_NAME} || true"
+          steps {
+             script {
+                // Remove existing test container if it exists
+                sh "docker rm -f test-${IMAGE_NAME} || true"
 
-                    // Run new test container
-                    sh "docker run -d --name test-${IMAGE_NAME} -p 5001:5000 ${IMAGE_NAME}:${IMAGE_TAG}"
+                // Run new test container
+                sh "docker run -d --name test-${IMAGE_NAME} -p 5001:5000 ${IMAGE_NAME}:${IMAGE_TAG}"
 
-                    // Wait for container to start
-                    sh "sleep 10"
+                // Wait for container to start
+                sh "sleep 10"
 
-                    // Simple health check
-                    sh "curl -f http://localhost:5001 || exit 1"
+                // Simple health check
+                sh "curl -f http://localhost:5001 || exit 1"
 
-                    // Stop and remove test container after check
-                    sh "docker stop test-${IMAGE_NAME}"
-                    sh "docker rm test-${IMAGE_NAME}"
-                }
-            }
+               // No need to stop/remove here because we already removed it at start
         }
+    }
+}
+
 
         stage('Docker Login') {
             steps {
