--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,17 +2,14 @@ pipeline {
     agent any
 
     environment {
-        IMAGE_NAME = "flask-devops-app"
-        IMAGE_TAG = "v1"
-        DOCKERFILE_PATH = "docker/Dockerfile"
-        APP_PATH = "app/flask-app"
-        DOCKER_REGISTRY = "awaismalak"  // your Docker Hub username
-        K8S_DEPLOYMENT_FILE = "kubernetes/flask-app-deployment.yaml"
+        DOCKER_IMAGE = "flask-devops-app:v1"
+        TEST_CONTAINER = "test-flask-devops-app-${env.BUILD_NUMBER}"  // Unique name per build
+        DOCKER_REGISTRY = "<YOUR_DOCKER_REGISTRY>"                  // Replace if pushing to Docker Hub
+        DOCKER_CREDENTIALS = "docker-hub-credentials"              // Jenkins credential ID
     }
 
     stages {
-
-        stage('Checkout') {
+        stage('Checkout SCM') {
             steps {
                 git branch: 'main', url: 'https://github.com/Malikawais108/aws-devops-cicd-project.git'
             }
@@ -21,72 +18,65 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build("${IMAGE_NAME}:${IMAGE_TAG}", "-f ${DOCKERFILE_PATH} .")
+                    sh """
+                        docker build -t ${DOCKER_IMAGE} -f docker/Dockerfile .
+                    """
                 }
             }
         }
 
         stage('Test Container') {
-          steps {
-             script {
-                // Remove existing test container if it exists
-                sh "docker rm -f test-${IMAGE_NAME} || true"
-
-                // Run new test container
-                sh "docker run -d --name test-${IMAGE_NAME} -p 5001:5000 ${IMAGE_NAME}:${IMAGE_TAG}"
-
-                // Wait for container to start
-                sh "sleep 10"
-
-                // Simple health check
-                sh "curl -f http://localhost:5001 || exit 1"
-
-               // No need to stop/remove here because we already removed it at start
-        }
-    }
-}
-
-
-        stage('Docker Login') {
             steps {
                 script {
-                    // login to Docker Hub using Jenkins credentials
-                    withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'USER', passwordVariable: 'PASS')]) {
-                        sh "echo $PASS | docker login -u $USER --password-stdin"
+                    // Remove container if exists (safe)
+                    sh "docker rm -f ${TEST_CONTAINER} || true"
+
+                    // Run container
+                    sh "docker run -d --name ${TEST_CONTAINER} -p 5001:5000 ${DOCKER_IMAGE}"
+                }
+            }
+        }
+
+        stage('Docker Login & Push') {
+            when {
+                expression { return env.DOCKER_REGISTRY != '' }
+            }
+            steps {
+                script {
+                    withCredentials([usernamePassword(credentialsId: "${DOCKER_CREDENTIALS}", usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                        sh "echo $DOCKER_PASS | docker login ${DOCKER_REGISTRY} -u $DOCKER_USER --password-stdin"
+                        sh "docker tag ${DOCKER_IMAGE} ${DOCKER_REGISTRY}/${DOCKER_IMAGE}"
+                        sh "docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}"
                     }
                 }
             }
         }
 
-        stage('Push Docker Image') {
-            steps {
-                script {
-                    sh "docker tag ${IMAGE_NAME}:${IMAGE_TAG} ${DOCKER_REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}"
-                    sh "docker push ${DOCKER_REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}"
-                }
-            }
-        }
-
         stage('Deploy to Kubernetes (Optional)') {
+            when {
+                expression { return true }  // Change condition if needed
+            }
             steps {
                 script {
-                    sh "kubectl apply -f ${K8S_DEPLOYMENT_FILE}"
+                    // Replace with your deployment YAML or kubectl commands
+                    sh "kubectl apply -f k8s/deployment.yaml"
                 }
             }
         }
-
     }
 
     post {
-        success {
-            echo "Pipeline completed successfully!"
+        always {
+            echo 'Cleaning up test container...'
+            sh "docker rm -f ${TEST_CONTAINER} || true"
         }
+
+        success {
+            echo 'Pipeline completed successfully!'
+        }
+
         failure {
-            echo "Pipeline failed! Check logs."
+            echo 'Pipeline failed! Check logs.'
         }
     }
 }
-
-
-
-
