--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,22 +2,23 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_IMAGE = "flask-devops-app:v1"
-        DOCKER_REGISTRY = ""   // Set your registry if pushing
-        DOCKER_CREDENTIALS = "docker-hub-credentials"
+        IMAGE_NAME = "flask-devops-app"
+        IMAGE_TAG = "v1"
+        TEST_CONTAINER_NAME = "test-flask-devops-app"
     }
 
     stages {
+
         stage('Checkout SCM') {
             steps {
-                git branch: 'main', url: 'https://github.com/Malikawais108/aws-devops-cicd-project.git'
+                git url: 'https://github.com/Malikawais108/aws-devops-cicd-project.git', branch: 'main'
             }
         }
 
         stage('Build Docker Image') {
             steps {
                 script {
-                    sh "docker build -t ${DOCKER_IMAGE} -f docker/Dockerfile ."
+                    sh "docker build -t ${IMAGE_NAME}:${IMAGE_TAG} -f docker/Dockerfile ."
                 }
             }
         }
@@ -25,31 +26,28 @@ pipeline {
         stage('Test Container') {
             steps {
                 script {
-                    // Generate a random free port between 5000-5999
-                    def randomPort = 5000 + new Random().nextInt(1000)
-                    env.TEST_PORT = "${randomPort}"
-                    env.TEST_CONTAINER = "test-flask-devops-app-${env.BUILD_NUMBER}"
+                    // Generate a random port to avoid conflicts
+                    env.TEST_PORT = sh(script: "shuf -i 5001-5999 -n 1", returnStdout: true).trim()
+                    echo "Running test container on port ${env.TEST_PORT}"
 
                     // Remove container if exists
-                    sh "docker rm -f ${env.TEST_CONTAINER} || true"
+                    sh "docker rm -f ${TEST_CONTAINER_NAME} || true"
 
-                    // Run container with dynamic port
-                    sh "docker run -d --name ${env.TEST_CONTAINER} -p ${env.TEST_PORT}:5000 ${DOCKER_IMAGE}"
-                    echo "Test container running on port ${env.TEST_PORT}"
+                    // Run container
+                    sh "docker run -d --name ${TEST_CONTAINER_NAME} -p ${env.TEST_PORT}:5000 ${IMAGE_NAME}:${IMAGE_TAG}"
                 }
             }
         }
 
         stage('Docker Login & Push') {
-            when {
-                expression { return env.DOCKER_REGISTRY != '' }
-            }
             steps {
                 script {
-                    withCredentials([usernamePassword(credentialsId: "${DOCKER_CREDENTIALS}", usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
-                        sh "echo $DOCKER_PASS | docker login ${DOCKER_REGISTRY} -u $DOCKER_USER --password-stdin"
-                        sh "docker tag ${DOCKER_IMAGE} ${DOCKER_REGISTRY}/${DOCKER_IMAGE}"
-                        sh "docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}"
+                    withCredentials([usernamePassword(credentialsId: 'docker-hub-credentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                        sh """
+                            echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+                            docker tag ${IMAGE_NAME}:${IMAGE_TAG} $DOCKER_USER/${IMAGE_NAME}:${IMAGE_TAG}
+                            docker push $DOCKER_USER/${IMAGE_NAME}:${IMAGE_TAG}
+                        """
                     }
                 }
             }
@@ -57,9 +55,7 @@ pipeline {
 
         stage('Deploy to Kubernetes (Optional)') {
             steps {
-                script {
-                    sh "kubectl apply -f k8s/deployment.yaml"
-                }
+                echo "Deployment to Kubernetes can be added here if required."
             }
         }
     }
@@ -67,15 +63,15 @@ pipeline {
     post {
         always {
             echo "Cleaning up test container..."
-            sh "docker rm -f ${env.TEST_CONTAINER} || true"
+            sh "docker rm -f ${TEST_CONTAINER_NAME} || true"
         }
 
         success {
-            echo 'Pipeline completed successfully!'
+            echo "Pipeline completed successfully!"
         }
 
         failure {
-            echo 'Pipeline failed! Check logs.'
+            echo "Pipeline failed! Check logs."
         }
     }
 }
