--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,12 +2,12 @@ pipeline {
     agent any
 
     environment {
-        IMAGE_NAME = "flask-devops-app"
-        IMAGE_TAG = "v1"
+        DOCKER_IMAGE = 'flask-devops-app:v1'
+        TEST_CONTAINER = 'test-flask-devops-app'
+        DOCKERHUB_CREDENTIALS = 'docker-hub-credentials'
     }
 
     stages {
-
         stage('Checkout SCM') {
             steps {
                 git url: 'https://github.com/Malikawais108/aws-devops-cicd-project.git', branch: 'main'
@@ -17,7 +17,8 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    sh "sudo docker build -t ${IMAGE_NAME}:${IMAGE_TAG} -f docker/Dockerfile ."
+                    echo "Building Docker image..."
+                    sh "docker build -t ${DOCKER_IMAGE} -f docker/Dockerfile ."
                 }
             }
         }
@@ -25,16 +26,19 @@ pipeline {
         stage('Test Container') {
             steps {
                 script {
-                    // Generate random container name and port
-                    env.TEST_CONTAINER = "test-${IMAGE_NAME}-${env.BUILD_NUMBER}"
-                    env.TEST_PORT = sh(script: "shuf -i 5001-5999 -n 1", returnStdout: true).trim()
-                    echo "Running test container ${env.TEST_CONTAINER} on port ${env.TEST_PORT}"
+                    // Remove old container if exists
+                    sh """
+                        if [ \$(docker ps -a -q -f name=${TEST_CONTAINER}) ]; then
+                            docker rm -f ${TEST_CONTAINER}
+                        fi
+                    """
 
-                    // Remove old container if exists (ignore errors)
-                    sh "sudo docker rm -f ${env.TEST_CONTAINER} || true"
+                    // Choose a random port to avoid conflicts
+                    TEST_PORT=\$(shuf -i 5001-5999 -n 1)
+                    echo "Running test container on port \$TEST_PORT"
 
                     // Run container
-                    sh "sudo docker run -d --name ${env.TEST_CONTAINER} -p ${env.TEST_PORT}:5000 ${IMAGE_NAME}:${IMAGE_TAG}"
+                    sh "docker run -d --name ${TEST_CONTAINER} -p \$TEST_PORT:5000 ${DOCKER_IMAGE}"
                 }
             }
         }
@@ -42,12 +46,10 @@ pipeline {
         stage('Docker Login & Push') {
             steps {
                 script {
-                    withCredentials([usernamePassword(credentialsId: 'docker-hub-credentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
-                        sh """
-                            echo "$DOCKER_PASS" | sudo docker login -u "$DOCKER_USER" --password-stdin
-                            sudo docker tag ${IMAGE_NAME}:${IMAGE_TAG} $DOCKER_USER/${IMAGE_NAME}:${IMAGE_TAG}
-                            sudo docker push $DOCKER_USER/${IMAGE_NAME}:${IMAGE_TAG}
-                        """
+                    withCredentials([usernamePassword(credentialsId: "${DOCKERHUB_CREDENTIALS}", usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                        sh "echo \$DOCKER_PASS | docker login -u \$DOCKER_USER --password-stdin"
+                        sh "docker tag ${DOCKER_IMAGE} \$DOCKER_USER/${DOCKER_IMAGE}"
+                        sh "docker push \$DOCKER_USER/${DOCKER_IMAGE}"
                     }
                 }
             }
@@ -55,7 +57,7 @@ pipeline {
 
         stage('Deploy to Kubernetes (Optional)') {
             steps {
-                echo "Deploy to Kubernetes can be added here if required."
+                echo "Skipping Kubernetes deployment for now."
             }
         }
     }
@@ -63,13 +65,11 @@ pipeline {
     post {
         always {
             echo "Cleaning up test container..."
-            sh "sudo docker rm -f ${env.TEST_CONTAINER} || true"
+            sh "docker rm -f ${TEST_CONTAINER} || true"
         }
-
         success {
             echo "Pipeline completed successfully!"
         }
-
         failure {
             echo "Pipeline failed! Check logs."
         }
