--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,23 +2,23 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_IMAGE = 'flask-devops-app:v1'
-        TEST_CONTAINER = 'test-flask-devops-app'
-        DOCKERHUB_CREDENTIALS = 'docker-hub-credentials'
+        IMAGE_NAME = "flask-devops-app"
+        IMAGE_TAG = "v1"
+        DOCKER_CREDENTIALS = "docker-hub-credentials"
     }
 
     stages {
         stage('Checkout SCM') {
             steps {
-                git url: 'https://github.com/Malikawais108/aws-devops-cicd-project.git', branch: 'main'
+                checkout scm
             }
         }
 
         stage('Build Docker Image') {
             steps {
                 script {
-                    echo "Building Docker image..."
-                    sh "docker build -t ${DOCKER_IMAGE} -f docker/Dockerfile ."
+                    echo "Building Docker image ${IMAGE_NAME}:${IMAGE_TAG}"
+                    sh "docker build -t ${IMAGE_NAME}:${IMAGE_TAG} -f docker/Dockerfile ."
                 }
             }
         }
@@ -26,19 +26,15 @@ pipeline {
         stage('Test Container') {
             steps {
                 script {
-                    // Remove old container if exists
-                    sh """
-                        if [ \$(docker ps -a -q -f name=${TEST_CONTAINER}) ]; then
-                            docker rm -f ${TEST_CONTAINER}
-                        fi
-                    """
+                    // Generate random port for testing
+                    TEST_PORT = sh(script: "shuf -i 5001-5999 -n 1", returnStdout: true).trim()
+                    echo "Running test container on port ${TEST_PORT}"
 
-                    // Choose a random port to avoid conflicts
-                    TEST_PORT=\$(shuf -i 5001-5999 -n 1)
-                    echo "Running test container on port \$TEST_PORT"
+                    // Remove old test container if exists
+                    sh "docker rm -f test-flask-devops-app || true"
 
-                    // Run container
-                    sh "docker run -d --name ${TEST_CONTAINER} -p \$TEST_PORT:5000 ${DOCKER_IMAGE}"
+                    // Run test container
+                    sh "docker run -d --name test-flask-devops-app -p ${TEST_PORT}:5000 ${IMAGE_NAME}:${IMAGE_TAG}"
                 }
             }
         }
@@ -46,32 +42,37 @@ pipeline {
         stage('Docker Login & Push') {
             steps {
                 script {
-                    withCredentials([usernamePassword(credentialsId: "${DOCKERHUB_CREDENTIALS}", usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
-                        sh "echo \$DOCKER_PASS | docker login -u \$DOCKER_USER --password-stdin"
-                        sh "docker tag ${DOCKER_IMAGE} \$DOCKER_USER/${DOCKER_IMAGE}"
-                        sh "docker push \$DOCKER_USER/${DOCKER_IMAGE}"
+                    withCredentials([usernamePassword(credentialsId: "${DOCKER_CREDENTIALS}", usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                        echo "Logging in to Docker Hub..."
+                        sh "echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin"
+
+                        echo "Pushing Docker image to Docker Hub..."
+                        sh "docker tag ${IMAGE_NAME}:${IMAGE_TAG} ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_TAG}"
+                        sh "docker push ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_TAG}"
                     }
                 }
             }
         }
 
-        stage('Deploy to Kubernetes (Optional)') {
+        stage('Cleanup Test Container') {
             steps {
-                echo "Skipping Kubernetes deployment for now."
+                script {
+                    echo "Cleaning up test container..."
+                    sh "docker rm -f test-flask-devops-app || true"
+                }
             }
         }
     }
 
     post {
         always {
-            echo "Cleaning up test container..."
-            sh "docker rm -f ${TEST_CONTAINER} || true"
+            echo "Pipeline finished!"
         }
         success {
-            echo "Pipeline completed successfully!"
+            echo "Pipeline succeeded!"
         }
         failure {
-            echo "Pipeline failed! Check logs."
+            echo "Pipeline failed!"
         }
     }
 }
