--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
             steps {
                 script {
                     echo "Building Docker image ${IMAGE_NAME}:${IMAGE_TAG}"
-                    sh "docker build -t ${IMAGE_NAME}:${IMAGE_TAG} -f docker/Dockerfile ."
+                    sh "sudo docker build -t ${IMAGE_NAME}:${IMAGE_TAG} -f docker/Dockerfile ."
                 }
             }
         }
@@ -26,15 +26,15 @@ pipeline {
         stage('Test Container') {
             steps {
                 script {
-                    // Generate random port for testing
-                    TEST_PORT = sh(script: "shuf -i 5001-5999 -n 1", returnStdout: true).trim()
+                    // Use 'def' for local variable
+                    def TEST_PORT = sh(script: "shuf -i 5001-5999 -n 1", returnStdout: true).trim()
                     echo "Running test container on port ${TEST_PORT}"
 
-                    // Remove old test container if exists
-                    sh "docker rm -f test-flask-devops-app || true"
+                    // Remove old test container (ignore errors)
+                    sh "sudo docker rm -f test-flask-devops-app || true"
 
-                    // Run test container
-                    sh "docker run -d --name test-flask-devops-app -p ${TEST_PORT}:5000 ${IMAGE_NAME}:${IMAGE_TAG}"
+                    // Run new test container
+                    sh "sudo docker run -d --name test-flask-devops-app -p ${TEST_PORT}:5000 ${IMAGE_NAME}:${IMAGE_TAG}"
                 }
             }
         }
@@ -44,11 +44,11 @@ pipeline {
                 script {
                     withCredentials([usernamePassword(credentialsId: "${DOCKER_CREDENTIALS}", usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
                         echo "Logging in to Docker Hub..."
-                        sh "echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin"
+                        sh "echo $DOCKER_PASS | sudo docker login -u $DOCKER_USER --password-stdin"
 
                         echo "Pushing Docker image to Docker Hub..."
-                        sh "docker tag ${IMAGE_NAME}:${IMAGE_TAG} ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_TAG}"
-                        sh "docker push ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_TAG}"
+                        sh "sudo docker tag ${IMAGE_NAME}:${IMAGE_TAG} ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_TAG}"
+                        sh "sudo docker push ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_TAG}"
                     }
                 }
             }
@@ -58,7 +58,7 @@ pipeline {
             steps {
                 script {
                     echo "Cleaning up test container..."
-                    sh "docker rm -f test-flask-devops-app || true"
+                    sh "sudo docker rm -f test-flask-devops-app || true"
                 }
             }
         }
