--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,8 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_IMAGE = "flask-devops-app:v1"
+        // Include your Docker Hub username in the image name
+        DOCKER_IMAGE = "awaismalak/flask-devops-app:v1"
         DOCKER_CREDENTIALS_ID = "docker-hub-credentials"
     }
 
@@ -18,7 +19,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 echo "Building Docker image ${DOCKER_IMAGE}..."
-                sh "sudo docker build -t ${DOCKER_IMAGE} -f docker/Dockerfile ."
+                sh "docker build -t ${DOCKER_IMAGE} -f docker/Dockerfile ."
             }
         }
 
@@ -31,10 +32,10 @@ pipeline {
                     echo "Running test container on port ${TEST_PORT}"
 
                     // Remove old test container if exists
-                    sh "sudo docker rm -f test-flask-devops-app || true"
+                    sh "docker rm -f test-flask-devops-app || true"
 
                     // Run the new test container
-                    sh "sudo docker run -d --name test-flask-devops-app -p ${TEST_PORT}:5000 ${DOCKER_IMAGE}"
+                    sh "docker run -d --name test-flask-devops-app -p ${TEST_PORT}:5000 ${DOCKER_IMAGE}"
                 }
             }
         }
@@ -47,9 +48,9 @@ pipeline {
                     passwordVariable: 'DOCKER_PASS')]) {
                     
                     echo "Logging in to Docker Hub..."
-                    sh "echo $DOCKER_PASS | sudo docker login -u $DOCKER_USER --password-stdin"
+                    sh "echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin"
                     echo "Pushing Docker image ${DOCKER_IMAGE}..."
-                    sh "sudo docker push ${DOCKER_IMAGE}"
+                    sh "docker push ${DOCKER_IMAGE}"
                 }
             }
         }
@@ -57,7 +58,7 @@ pipeline {
         stage('Cleanup Test Container') {
             steps {
                 echo "Cleaning up test container..."
-                sh "sudo docker rm -f test-flask-devops-app || true"
+                sh "docker rm -f test-flask-devops-app || true"
             }
         }
     }
