--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,6 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_IMAGE = "awaismalak/flask-devops-app:v1"
         DOCKER_CREDENTIALS_ID = "docker-hub-credentials"
         KUBE_CONFIG = "/var/lib/jenkins/.kube/config"
     }
@@ -18,20 +17,29 @@ pipeline {
 
         stage('Build Docker Image') {
             steps {
-                echo "Building Docker image ${DOCKER_IMAGE}..."
-                sh "docker build -t ${DOCKER_IMAGE} -f docker/Dockerfile ."
+                script {
+                    // Dynamic image tag: version + build number
+                    env.IMAGE_TAG = "v1-${env.BUILD_NUMBER}"
+                    env.DOCKER_IMAGE = "awaismalak/flask-devops-app:${env.IMAGE_TAG}"
+                    echo "Building Docker image ${env.DOCKER_IMAGE}..."
+                    sh "docker build -t ${env.DOCKER_IMAGE} -f docker/Dockerfile ."
+                }
             }
         }
 
         stage('Test Container') {
             steps {
                 script {
+                    // Pick a random test port
                     def TEST_PORT = sh(script: "shuf -i 5001-5999 -n 1", returnStdout: true).trim()
                     env.TEST_PORT = TEST_PORT
-                    echo "Running test container on port ${TEST_PORT}"
+                    echo "Running test container on port ${TEST_PORT}..."
 
+                    // Remove old test container if exists
                     sh "docker rm -f test-flask-devops-app || true"
-                    sh "docker run -d --name test-flask-devops-app -p ${TEST_PORT}:5000 ${DOCKER_IMAGE}"
+
+                    // Run the new test container
+                    sh "docker run -d --name test-flask-devops-app -p ${TEST_PORT}:5000 ${env.DOCKER_IMAGE}"
                 }
             }
         }
@@ -45,8 +53,8 @@ pipeline {
                     
                     echo "Logging in to Docker Hub..."
                     sh "echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin"
-                    echo "Pushing Docker image ${DOCKER_IMAGE}..."
-                    sh "docker push ${DOCKER_IMAGE}"
+                    echo "Pushing Docker image ${env.DOCKER_IMAGE}..."
+                    sh "docker push ${env.DOCKER_IMAGE}"
                 }
             }
         }
@@ -55,8 +63,14 @@ pipeline {
             steps {
                 echo "Deploying to Kubernetes..."
                 withEnv(["KUBECONFIG=${KUBE_CONFIG}"]) {
+                    // Update deployment.yaml with the dynamic image tag
+                    sh "sed -i 's|image: awaismalak/flask-devops-app:.*|image: ${env.DOCKER_IMAGE}|g' kubernetes/deployment.yaml"
+
+                    // Apply deployment and service
                     sh "kubectl apply -f kubernetes/deployment.yaml"
                     sh "kubectl apply -f kubernetes/service.yaml"
+
+                    // Wait for rollout
                     sh "kubectl rollout status deployment/flask-app"
                 }
             }
