--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,13 +6,12 @@ pipeline {
         DOCKER_CREDS = credentials('docker-hub-credentials')
     }
 
-    stages {
+    stage('Checkout') {
+    steps {
+        git branch: 'main', url: 'https://github.com/Malikawais108/aws-devops-cicd-project.git'
+    }
+}
 
-        stage('Checkout') {
-            steps {
-                git 'https://github.com/Malikawais108/aws-devops-cicd-project.git'
-            }
-        }
 
         stage('Build Docker Image') {
             steps {
